feed back home work 4

--- a/Домашняя работа №4/DOM Alert/style.css
+++ b/Домашняя работа №4/DOM Alert/style.css
@@ -3,7 +3,8 @@
     display: none;
 }
 .button{
-    margin-left: 750px;
+    display: flex;
+    justify-content: center;
 }
 .show{
     display: block;
