--- a/Домашняя Работа №5/style.css
+++ b/Домашняя Работа №5/style.css
@@ -6,3 +6,11 @@
     display: flex;
     justify-content: center;
 }
+tr{
+    display: flex;
+
+}
+.fas{
+justify-items: center;
+    justify-content: center;
+}
