--- a/Домашняя работа №8/css/style.css
+++ b/Домашняя работа №8/css/style.css
@@ -80,6 +80,14 @@ body {
   font-size: 4rem;
   color:white;
 }
-.pointer{
+.pointer, .stop_button{
   cursor: pointer;
+}
+.stop_button{
+  background-color: red;
+  color: #000;
+  width: 200px;
+  height: 50px;
+  font-size: 24px;
+  border: none;
 }
