Home work 8 timer

--- a/Домашняя работа №8/css/style.css
+++ b/Домашняя работа №8/css/style.css
@@ -80,11 +80,14 @@ body {
   font-size: 4rem;
   color:white;
 }
+
 .pointer, .stop_button{
   cursor: pointer;
 }
+
 .stop_button{
   background-color: red;
+  margin: 5px;
   color: #000;
   width: 200px;
   height: 50px;
