--- a/Домашняя работа №9/css/style.css
+++ b/Домашняя работа №9/css/style.css
@@ -89,7 +89,7 @@ body {
   width:50%;
   background:#ffc600;
   flex:0;
-  flex-basis:0;
+  flex-basis:1%;
 }
 
 /* unholy css to style input type="range" */
