--- a/Домашняя работа №15/style.css
+++ b/Домашняя работа №15/style.css
@@ -1,11 +1,13 @@
+.fas{
+justify-items: center;
+    justify-content: center;
+}
+
 .alert_information{
     display: none;
 }
 
-.alert_information.show{
+.alert_information.show {
     display: flex;
     justify-content: center;
-}
-#minPrice, #maxPrice{
-    width: 150px;
 }
